# cexa

./: .env.example  .gitignore  CMakeLists.txt  README.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  lint.yml  release.yml
include/: decorator.hpp  observer.hpp
include/common/: Arber.hpp  AsyncHttp.hpp  Gateway.hpp  Instrument.hpp  Instruments.hpp  config.hpp  enum.hpp  interface.hpp
include/risk/: risk.hpp  risk_calculator.hpp
include/utils/: env.hpp  logs.hpp
src/: arber.bot.cpp  decorator.cpp  interface.hpp  main.cpp  observer.hpp
src/arber/: arber.bot.cpp  config.cpp
src/base/: BaseGateway.cpp
src/binance/: BinanceGateway.cpp
src/bybit/: ByBitGateway.cpp
src/common/: AsyncHtpp.cpp
src/exchange/: binance.cpp  bybit.cpp  coinbase.cpp  okx.cpp
src/okx/: OkxGateway.cpp
src/risk/: risk.cpp  risk.hpp  risk_calculator.hpp
src/utils/: discord.cpp  env.hpp  http.cpp  logs.hpp  slack.cpp
